bin_PROGRAMS=ip_encapsulate ip_decapsulate
ip_encapsulate_LDADD=../libhwip/libhwip.la
ip_encapsulate_CFLAGS=-I../libhwip/
#ip_encapsulate_DEPENDENCIES=../libhwip/libhwip.la
ip_decapsulate_LDADD=../libhwip/libhwip.la
ip_decapsulate_CFLAGS=-I../libhwip/
#ip_decapsulate_DEPENDENCIES=../libhwip/libhwip.la
